--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-paginate": "^8.3.0",
+    "react-parallax": "^3.5.2",
     "react-range": "^1.10.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
