--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-range": "^1.10.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "react-scroll-parallax": "^3.5.0",
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
